--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,6 +18,8 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      script-file: ${{ steps.publish.outputs.script-file }} # script-file={} names have to match
     steps:
       - name: Get code
         uses: actions/checkout@v4
@@ -25,6 +27,9 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Publish JS filename
+        id: publish
+        run: find dist/assets/*.js -type f -excdir echo 'script-file={}' >> $GITHUB_OUTPUT ';' # write output to an env var - output ky-value pair and sets it for this 'step'
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -43,6 +48,8 @@ jobs:
           name: dist-files # must be same name that we had in test - Upload artifacts step
       - name: Output contents of the folder that have been previously downloaded
         run: ls
+      - name: Output filename
+        run: echo "${{ needs.build.outputs.script-file }}" # example of passing data between jobs
       - name: Deploy
         run: echo "Deploying..."
  
