--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm run build
       - name: Publish JS filename
         id: publish
-        run: find dist/assets/*.js -type f -excdir echo 'script-file={}' >> $GITHUB_OUTPUT ';' # write output to an env var - output ky-value pair and sets it for this 'step'
+        run: find dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';' # write output to an env var - output ky-value pair and sets it for this 'step'
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
